💄 style: add fonts in css

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,26 +2,65 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+  font-family: 'LibreFranklin';
+  src: url(@assets/fonts/Libre_Franklin/static/LibreFranklin-Regular.ttf);
+  font-style: normal;
+  font-weight: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@font-face {
+  font-family: 'LibreFranklin';
+  src: url(@assets/fonts/Libre_Franklin/static/LibreFranklin-Bold.ttf);
+  font-style: normal;
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'LibreFranklin';
+  src: url(@assets/fonts/Libre_Franklin/static/LibreFranklin-Light.ttf);
+  font-style: normal;
+  font-weight: lighter;
+}
+
+@font-face {
+  font-family: 'Nunito';
+  src: url(@assets\fonts\Nunito\static\Nunito-Regular.ttf);
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Nunito';
+  src: url(@assets/fonts/Nunito/static/Nunito-Bold.ttf);
+  font-style: normal;
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Nunito';
+  src: url(@assets/fonts/Nunito/static/Nunito-Light.ttf);
+  font-style: normal;
+  font-weight: lighter;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Nunito';
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply bg-light;
+}
+
+aside {
+  height: calc(100vh - 40px);
+}
+
+@media screen and (max-width: 768px) {
+  aside {
+    width: calc(100vw - 32px);
+  }
 }
