--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -3,6 +3,10 @@
   animation: toast-fade-in-right 0.7s;
 }
 
+.toast-anim-out {
+  animation: toast-fade-out-right 0.7s;
+}
+
 @keyframes toast-fade-in-right {
   from {
     opacity: 0;
@@ -11,5 +15,16 @@
   to {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+@keyframes toast-fade-out-right {
+  from {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(100%);
   }
 }
